fix: [#471] launch arguments being added in when Java arguments were empty